@@ -1,5 +1,5 @@
 #MIN_CONFIG(3.2.0)
 
-AM_INIT_AUTOMAKE( [kthinkbat], [0.2.5] )
+AM_INIT_AUTOMAKE( [kthinkbat], [0.2.6-svn] )
 AC_C_BIGENDIAN
 AC_CHECK_KDEMAXPATHLEN
